# PATLIB

./: .gitignore  CMakeLists.txt  IO_word_manipulator.hpp  candidate_count_trie.hpp  char_class.hpp  exception.hpp  generator.hpp  growing_array.hpp  hyphenated_word.hpp  hyphenation_type.hpp  io_reverse_mapping.hpp  io_word_manipulator.hpp  level.hpp  opatgen.cpp  pass.hpp  pattern_input_file.hpp  pattern_output_file.hpp  ptl_exc.hpp  ptl_ga.hpp  ptl_gen.hpp  ptl_hwrd.hpp  ptl_mopm.hpp  ptl_sts.hpp  ptl_tpm.hpp  ptl_vers.hpp  translate.hpp  translation_service.hpp  trie_pattern_manipulator.hpp  typedefs.hpp  version.hpp  word_input_file.hpp  word_output_file.hpp
tools/: dic2traskelet.cpp  opglog2rep.pl  opgwrap.pl
